@@ -11,6 +11,8 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+option(WITH_TESTS "Enable building of unit tests" ON)
+
 # find Qt packages
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)
@@ -31,6 +33,18 @@ add_library(qmicroz
 # target
 target_link_libraries(qmicroz PRIVATE Qt${QT_VERSION_MAJOR}::Core)
 target_compile_definitions(qmicroz PRIVATE QMICROZ_LIBRARY)
+
+# unit test
+if(WITH_TESTS)
+  enable_testing()
+  find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Test)
+  find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Test)
+
+  add_executable(test_qmicroz src/test_qmicroz.cpp)
+  add_test(NAME test_qmicroz COMMAND test_qmicroz)
+
+  target_link_libraries(test_qmicroz PRIVATE Qt${QT_VERSION_MAJOR}::Test qmicroz)
+endif(WITH_TESTS)
 
 # install [/usr/lib/libqmicroz.so]
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
