@@ -1,0 +1,108 @@
+/*
+ * This file is part of QMicroz,
+ * under the MIT License.
+ * https://github.com/artemvlas/qmicroz
+ *
+ * Copyright (c) 2024 - present Artem Vlasenko
+*/
+
+#include <QtTest/QTest>
+
+#include "qmicroz.h"
+
+class test_qmicroz : public QObject
+{
+    Q_OBJECT
+
+public:
+    test_qmicroz();
+    ~test_qmicroz();
+
+private slots:
+    void test_compress_buf_file();
+    void test_compress_buf_list();
+    void test_extract();
+    void test_compress_file();
+    void test_compress_folder();
+
+private:
+    const QString tmp_test_dir = QDir::currentPath() + "/tmp_test_files";
+};
+
+test_qmicroz::test_qmicroz()
+{
+    QDir().mkdir(tmp_test_dir);
+}
+
+test_qmicroz::~test_qmicroz()
+{
+    QDir(tmp_test_dir).removeRecursively();
+}
+
+void test_qmicroz::test_compress_buf_file()
+{
+    QByteArray ba = "Random data to compress. 1234567890.";
+    QString output_file = tmp_test_dir + "/test_compress_buf_file.zip";
+    QMicroz::compress_buf(ba, "compressed.txt", output_file);
+
+    QVERIFY(QMicroz::isZipFile(output_file));
+}
+
+void test_qmicroz::test_compress_buf_list()
+{
+    BufList buf_list = {
+        { "file1.txt", "Random file data 1" },
+        { "folder/file2.txt", "Random file data 2" },
+        { "folder/file3.txt", "Random file data 3" },
+        { "file4.txt", "Random file data 4" },
+        { "folder2/file5.txt", "Random file data 5" },
+        { "folder2/file6.txt", "Random file data 6" },
+    };
+
+    QString output_file = tmp_test_dir + "/test_compress_buf_list.zip";
+    QMicroz::compress_buf(buf_list, output_file);
+
+    QVERIFY(QMicroz::isZipFile(output_file));
+    QCOMPARE(QMicroz(output_file).name(1), "file4.txt");
+}
+
+void test_qmicroz::test_extract()
+{
+    QVERIFY(QMicroz::extract(tmp_test_dir + "/test_compress_buf_list.zip"));
+    QVERIFY(QFileInfo::exists(tmp_test_dir + "/folder/file3.txt"));
+}
+
+void test_qmicroz::test_compress_file()
+{
+    QByteArray ba = "Random data to file creating. 1234567890.";
+    QString input_file = tmp_test_dir + "/test_compress_file_(source).txt";
+    QString output_file = tmp_test_dir + "/test_compress_file.zip";
+
+    QFile file(input_file);
+    file.open(QFile::WriteOnly) && file.write(ba);
+    file.close();
+
+    QMicroz::compress_file(input_file, output_file);
+
+    QVERIFY(!QMicroz::isZipFile(input_file));
+    QVERIFY(QMicroz::isZipFile(output_file));
+}
+
+void test_qmicroz::test_compress_folder()
+{
+    QString input_folder = tmp_test_dir + "/folder2";
+    QString zip_path = input_folder + ".zip";
+
+    QVERIFY(QMicroz::compress_folder(input_folder));
+    QVERIFY(QMicroz::isZipFile(zip_path));
+
+    QMicroz qmz(zip_path);
+
+    QVERIFY(qmz.isFolder(0));
+    QVERIFY(qmz.isFile(1));
+    QCOMPARE(qmz.name(2), "folder2/file6.txt");
+}
+
+QTEST_APPLESS_MAIN(test_qmicroz)
+
+#include "test_qmicroz.moc"
